[package]
name = "rs-log-analyzer"
version = "0.1.0"
authors = ["seelabs <scott.determan@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
itertools = "0.10.0"
lazy_static = "1.4.0"
memmap = "0.7.0" # This appears unmaintained
regex = "1"
serde_json = "1.0"
structopt = "0.3.13"

[build]
rustflags = ["-C", "target-cpu=native"]